--- a/src/download.html
+++ b/src/download.html
@@ -694,6 +694,21 @@
                                     </div>
                                     <div class="w-portfolio-item order_10 tv-apps" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="emby-for-lg-smart-tv.html">
+                                                <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/lg.png" class="w-portfolio-item-image-first wp-post-image" alt="LG">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby for LG Smart TV</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
+                                    <div class="w-portfolio-item order_10 tv-apps" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="emby-for-samsung-smart-tv.html">
                                                 <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/samsung-600x600.jpg" class="w-portfolio-item-image-first wp-post-image" alt="samsung">	</div>
                                                 <div class="w-portfolio-item-meta">
