--- a/src/emby-for-lg-smart-tv.html
+++ b/src/emby-for-lg-smart-tv.html
@@ -444,7 +444,7 @@
                             </div>
                             <h2 style="margin-top: 0; padding-top: 0;">Download</h2>
                             <div>
-                                <p>Emby is available for download and installation using the LG Smart TV app store.</p>
+                                <p>Emby is available for download and installation using the LG app store on your TV.</p>
                             </div>
                         </div>
                     </div>
