update linux instructions

--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -420,13 +420,19 @@
 
                                     <div>
                                         <h2>Installation - x64</h2>
-                                        <p>Ubuntu 14.04-17.10, Debian 8-9, CentOS 7, Fedora 25, Linux Mint 17, OpenSuse 42.2, 42.3</p>
                                         <div>SSH into your linux machine and copy/paste the following command:</div>
                                         <div><code style="white-space:nowrap;">curl -f -s https://raw.githubusercontent.com/MediaBrowser/Emby.Releases/master/Server/setup.sh | sh</code></div>
                                         <div style="font-size: 90%;opacity:.84;">Note: When new versions are released, simply return here and run the command again.</div>
-                                        <br/>
+                                        <br />
                                         <div><strong>Run Setup Wizard</strong></div>
                                         <p>Visit http://localhost:8096</p>
+                                        <div>Supported Distros:</div>
+                                        <div><b>Ubuntu</b> 14.04, 16.04, 17.04, 17.10</div>
+                                        <div><b>Debian</b> 8, 9</div>
+                                        <div><b>CentOS</b> 7</div>
+                                        <div><b>Fedora</b> 25, 26</div>
+                                        <div><b>Linux Mint</b> 17.1, 17.2, 17.3, 18, 18.1, 18.2</div>
+                                        <div><b>OpenSuse</b> 42.2, 42.3, Tumbleweed</div>
 
                                         <h2>Installation - ARM</h2>
                                         <p>Follow the instructions for your distro on the <a target="_blank" href="https://software.opensuse.org/download.html?project=home%3Aemby&package=emby-server">Emby Open Build Service</a>.</p>
