--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -422,7 +422,7 @@
                                         <h2>Installation - x64</h2>
                                         <div>SSH into your linux machine and copy/paste the following command:</div>
                                         <div><code style="white-space:nowrap;">curl -f -s https://raw.githubusercontent.com/MediaBrowser/Emby.Releases/master/Server/setup.sh | sh</code></div>
-                                        <div style="font-size: 90%;opacity:.84;">Note: When new versions are released, simply return here and run the command again.</div>
+                                        <div style="font-size: 90%;opacity:.84;">Note: To update to new releases of Emby Server, simply return here and run the command again.</div>
                                         <br />
                                         <div><strong>Run Setup Wizard</strong></div>
                                         <p>Visit http://localhost:8096</p>
