--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -486,9 +486,13 @@
                                     <div class="w-tabs-section-header"><div class="w-tabs-section-icon"><i class=""></i></div><h5 class="w-tabs-section-title">ASUSTOR</h5><div class="w-tabs-section-control"><i class="mdfi_hardware_keyboard_arrow_down"></i></div></div><div class="w-tabs-section-content" style="">
                                         <div class="w-tabs-section-content-h i-cf">
                                             <div><strong>Installation</strong></div>
-                                            <p>– Download and install one of the .apk files depending on the architecture of your NAS device.</p>
-                                            <p>– <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.34.0/emby-server-asustor_3.2.34.0_x64.apk">x86-x64 download</a></p>
-                                            <p>– arm download- coming soon.</p>
+                                            <div>– Download and install one of the .apk files depending on the architecture of your NAS device.</div>
+                                            <div>– <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.35.0/emby-server-asustor_3.2.35.0_x64.apk">x86-x64</a></div>
+                                            <div>– arm- coming soon.</div>
+                                            <br />
+                                            <div>– To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</div>
+                                            <br/>
+                                            <div><strong>Start Emby Server</strong></div>
                                             <div>– Start the server from the ASUSTOR web page</div>
                                             <div><strong>Run Setup Wizard</strong></div>
                                             <p>Visit http://localhost:8096</p>
@@ -502,7 +506,7 @@
                                                 <div class="wpb_wrapper">
                                                     <p>– Ensure you're running ReadyNAS 6.8.0 or greater. If version 6.8.0 is not detected by "check for updates", it can be downloaded and installed via the admin interface.</p>
                                                     <p>– Download one of the .deb files depending on the architecture of your NAS device. Please refer to the <a target="_blank" href="https://github.com/ReadyNAS/sdk/wiki/ReadyNAS-Applications-Specification#unsupportedsystype">ReadyNAS wiki</a> if you don't know what architecture you're running.</p>
-                                                    <p>– <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.34.0/emby-server-netgear_3.2.34.0_x64.deb">x86-x64 download</a></p>
+                                                    <p>– <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.35.0/emby-server-netgear_3.2.35.0_x64.deb">x86-x64 download</a></p>
                                                     <p>– arm download- coming soon.</p>
                                                     <p>– Upload the deb for your architecture via the apps tab in the admin interface. A popup should appear to keep you updated on the installation progress.</p>
                                                     <p>– When the installation is over, you should see Emby appear in the apps tabs on the admin interface, you can turn it on if it's not already and the launch button will take you to the install wizard.</p>
