--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -492,6 +492,8 @@
                                             <br />
                                             <div>– To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</div>
                                             <br/>
+                                            <div><b>Note</b>: Emby Server can also be installed from <a target="_blank" href="https://www.asustor.com/en/app_central/app_detail?id=749&type=&model=">Asustor App Central</a>. The version in AppCentral may sometimes run a little behind due to delays in the Asustor testing and review process.</div>
+                                            <br />
                                             <div><strong>Start Emby Server</strong></div>
                                             <div>– Start the server from the ASUSTOR web page</div>
                                             <div><strong>Run Setup Wizard</strong></div>
