Add feature matrix link to Premiere page

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -790,8 +790,22 @@
                                     <div class="aio-icon-description" style="">Use your Amazon Echo device to control your Emby apps by voice!  Just say "Alexa, ask Emby to play the next episode of Game of Thrones" and sit back and enjoy.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
-                        </div>                    </div>
+                        </div>
+                    </div>
 
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="full-width">
+                            <div class="wpb_text_column ">
+                                <div class="wpb_wrapper">
+
+                                    <p style="text-align: center;">Some apps have the option to unlock basic playback individually.  For a complete list of the features provided with Premiere vs. these unlocks, please see the <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby-Premiere-Feature-Matrix">Feature Matrix</a>.</p>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Row Backgrounds -->
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                     <div class="g-cols wpb_row offset_wide">
