Add Emby Connect help text

--- a/src/alexalogin.html
+++ b/src/alexalogin.html
@@ -400,6 +400,18 @@
                     <div class="w-pagehead">
                         <h1>Alexa Setup</h1>
                     </div>
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="full-width">
+                            <div class="wpb_text_column ">
+                                <div class="wpb_wrapper">
+
+                                    <p style="text-align: center; margin-top: 2em">The Emby Alexa skill talks to your server via an account linked through Emby Connect.  To learn how to setup one of your Emby users with Connect, please see <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect#guide-for-administrators">Emby Connect for Administrators</a>.  Once you have configured the user you wish Alexa to use, then enter those Emby Connect credentials below.</p>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="l-submain wpb_row">
