make download links dynamic

--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -470,7 +470,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-rpm_{version}_x86_64.rpm" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
@@ -482,7 +482,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-rpm_{version}_x86_64.rpm" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
@@ -493,7 +493,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-rpm_{version}_x86_64.rpm" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
@@ -505,7 +505,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
@@ -517,7 +517,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
@@ -529,7 +529,7 @@
 
                                             <div><b>Download</b></div>
                                             <ul style="margin-bottom:1em;">
-                                                <li><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
+                                                <li><a class="lnkPackageDownload" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-deb_3.2.50.0_amd64.deb">x64</a></li>
                                             </ul>
 
                                             <div><b>Install</b></div>
