make instructions dynamic

--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -474,7 +474,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">yum install emby-server-rpm_3.2.50.0_x86_64.rpm</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">yum install {filename}</code></div>
 
                                         </div>
 
@@ -486,7 +486,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">dnf install emby-server-rpm_3.2.50.0_x86_64.rpm</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">dnf install {filename}</code></div>
                                         </div>
 
                                         <div class="installPlatform hide opensuse">
@@ -497,7 +497,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">zypper install emby-server-rpm_3.2.50.0_x86_64.rpm</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">zypper install {filename}</code></div>
 
                                         </div>
 
@@ -509,7 +509,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">dpkg -i emby-server-deb_3.2.50.0_amd64.deb</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></div>
 
                                         </div>
 
@@ -521,7 +521,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">dpkg -i emby-server-deb_3.2.50.0_amd64.deb</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></div>
 
                                         </div>
 
@@ -533,7 +533,7 @@
                                             </ul>
 
                                             <div><b>Install</b></div>
-                                            <div><code style="white-space:nowrap;">dpkg -i emby-server-deb_3.2.50.0_amd64.deb</code></div>
+                                            <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></div>
 
                                         </div>
 
