--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -434,8 +434,8 @@
                                         <h2 style="margin-top:0;margin-bottom:0em;">Portable Installation</h2>
                                         <p>
                                             <br />- Download and unzip one of the following zip files depending on system architecture:
-                                            <br /><a class="lnkPackageDownload" data-filename="embyserver-windows-x64-{version}.7z" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-windows-x64-3.2.50.0.7z">Windows x64</a>
-                                            <br /><a class="lnkPackageDownload" data-filename="embyserver-windows-x86-{version}.7z" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-windows-x86-3.2.50.0.7z">Windows x86</a>
+                                            <br /><a class="lnkPackageDownload" data-filename="embyserver-win-x64-{version}.7z" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-win-x64-3.2.50.0.7z">Windows x64</a>
+                                            <br /><a class="lnkPackageDownload" data-filename="embyserver-win-x86-{version}.7z" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-win-x86-3.2.50.0.7z">Windows x86</a>
                                             <br />- Run EmbyServer.exe from within the System sub-folder
                                             <br />- Run the Emby Server setup wizard by visiting http://localhost:8096
                                         </p>
