--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -4,7 +4,7 @@
 <head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Emby Server for Mac - Emby</title>
+    <title>Emby Server for Linux - Emby</title>
     <meta name="description" content="Emby Server for Apple Mac OSX - Organize and stream your personal videos, music, photos and Live TV to any device.">
     {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
