--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -420,11 +420,9 @@
                                             <strong>Install Emby Server</strong>
                                         </div>
                                         <p>
-                                            <code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver_netcore instl</code>
-                                            <br /><br />Or for for armhf/armv7 (Rpi 2/3):
-                                            <br /><code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver:armv7 instl</code>
-                                            <br /><br />Or for for aarch64/armv8:
-                                            <br /><code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver:aarch64 instl</code>
+                                            <code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver instl</code>
+                                            <br /><br />Or for for arm32v7 (Rpi 2/3):
+                                            <br /><code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver_arm32v7 instl</code>
                                         </p>
                                         <div>
                                             <strong>Run Emby Server</strong>
